<?xml version="1.0"?>
<package>
  <name>gaussian_process</name>
  <version>0.0.0</version>
  <description>The gaussian_process package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>
  <author>Sungjoon Choi</author>
  <author>Kyungjae Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
